# smolcode

./: .gitignore  Cargo.toml  LICENSE  README.md  install.sh
.github/workflows/: release.yml
crates/smolcode-py/: Cargo.toml  README.md  pyproject.toml
crates/smolcode-py/src/: lib.rs
examples/: fanout_smoke.rs  lsp_probe.rs  route_probe.rs
scripts/: publish-github.sh
src/: agent.rs  agents_init.rs  autocompact.rs  bgproc.rs  clipboard.rs  commands.rs  completions.rs  config.rs  config_view.rs  context.rs  delegate.rs  engine.rs  eval.rs  extract.rs  fmt.rs  git.rs  glyphs.rs  headless.rs  highlight.rs  hooks.rs  judge.rs  lib.rs  lsp.rs  main.rs  mcp_tools.rs  multi_edit.rs  notify.rs  patch.rs  permission.rs  project.rs  prompts.rs  rag.rs  redact.rs  repair.rs  retry.rs  route_clf.rs  router.rs  rules.rs  search.rs  session.rs  (+18 more)
