[package]
name = "smolcode"
version = "0.1.0"
edition = "2021"
description = "An SLM-optimized, opencode-class terminal coding agent (TUI + headless), built on Rust and LiteForge."
authors = ["Sean Poyner <sean.poyner2@gmail.com>"]
license = "MIT"
repository = "https://github.com/seanpoyner/smolcode"
keywords = ["coding-agent", "tui", "llm", "slm", "liteforge"]
categories = ["command-line-utilities", "development-tools"]
readme = "README.md"
rust-version = "1.75"

[workspace]
members = ["."]
resolver = "2"

[lib]
name = "smolcode"
path = "src/lib.rs"

[[bin]]
name = "smolcode"
path = "src/main.rs"

[features]
# In-process learned routing classifier. ON by default; degrades to regex
# routing when ONNX models are not installed. Build with --no-default-features
# for a lean binary without ort/tokenizers.
default = ["route-clf"]
route-clf = ["dep:ort", "dep:tokenizers", "dep:once_cell"]

[dependencies]
liteforge = { git = "https://github.com/seanpoyner/liteforge.git", package = "liteforge" }
ort = { version = "=2.0.0-rc.10", optional = true }
tokenizers = { version = "0.20", optional = true }
once_cell = { version = "1", optional = true }
tokio = { version = "1", features = ["macros", "rt-multi-thread", "io-std", "sync", "time"] }
serde_json = "1"
anyhow = "1"
ratatui = { version = "0.29", features = ["unstable-rendered-line-info"] }
crossterm = { version = "0.28", features = ["event-stream"] }
futures = "0.3"
serde = { version = "1", features = ["derive"] }
toml = "0.8"
dirs = "5"
pulldown-cmark = "0.12"
fuzzy-matcher = "0.3"
similar = "2"
syntect = { version = "5", default-features = false, features = ["default-fancy"] }

[profile.dev]
opt-level = 1
