[build-system]
requires = ["maturin>=1.5,<2.0"]
build-backend = "maturin"

[project]
name = "smolcode-core"
version = "0.1.0"
description = "Python bindings for the smolcode agent engine (Rust core)"
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
keywords = ["coding-agent", "llm", "slm", "ai", "rust", "agent"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Rust",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Software Development :: Code Generators",
]

[project.urls]
Homepage = "https://github.com/seanpoyner/smolcode"
Repository = "https://github.com/seanpoyner/smolcode"

[tool.maturin]
features = ["pyo3/extension-module"]
module-name = "smolcode_core"

[tool.cibuildwheel]
# Build for Python 3.10, 3.11, 3.12
build = "cp310-* cp311-* cp312-*"
# Skip 32-bit builds and musllinux (Alpine) for now
skip = "*-win32 *-manylinux_i686 *-musllinux_*"

[tool.cibuildwheel.linux]
# Install Rust in the manylinux container before building
before-all = """
curl -sSf https://sh.rustup.rs | sh -s -- -y --default-toolchain stable --profile minimal
"""
environment = { PATH = "$HOME/.cargo/bin:$PATH" }

[tool.cibuildwheel.macos]
before-all = """
curl -sSf https://sh.rustup.rs | sh -s -- -y --default-toolchain stable --profile minimal
"""
environment = { PATH = "$HOME/.cargo/bin:$PATH" }
archs = ["x86_64", "arm64"]

[tool.cibuildwheel.windows]
before-all = """
rustup-init.exe -y --default-toolchain stable --profile minimal
"""
environment = { PATH = "$UserProfile\\.cargo\\bin;$PATH" }
